# mrexo

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
MRExo/: Cool_stars_20181027.csv  MR_Kepler_170605_noanalytTTV_noupplim.csv
PyCode/: Cool_stars_0_1Mj.csv  Cool_stars_1Mj.csv  Cool_stars_20181027.csv  Cool_stars_20181031.csv  Cool_stars_20181109.csv  Cross_Validation.py  MLE_fit.py  MLE_fit_R.py  MLE_fit_reduced.py  M_cond_R_boot.txt  M_cond_R_lower_boot.txt  M_cond_R_upper_boot.txt  M_cond_R_var_boot.txt  M_points_boot.txt  Mass_marg_boot.txt  R_cond_M_boot.txt  R_cond_M_lower_boot.txt  R_cond_M_upper_boot.txt  R_cond_M_var_boot.txt  R_points_boot.txt  Radius_marg_boot.txt  aic_boot.txt  bic_boot.txt  compare_Mdwarf_degrees.py  log_file.txt  plot.py  run_Mdwarfs.py  run_cluster.pbs  run_cluster.pbs.o6887917  run_cluster.pbs.o6949689  run_cluster_cyberlamp.pbs  run_cluster_cyberlamp.pbs.o7619681  run_cluster_cyberlamp_imap.pbs  run_cluster_cyberlamp_map.pbs  run_cluster_cyberlamp_reduced.pbs  run_cluster_open.pbs  run_cluster_open.pbs.o7385801  run_cluster_open.pbs.o7564241  run_cluster_open.pbs.o7793551  run_cluster_open.pbs.o7795982  (+48 more)
R_code/: MLE.R  MRestimate.R  MRpredict.R  MRpredict_local.R  folding_test.R  weights.mle.csv
docs/: Makefile  README.md  conf.py  cross_validate.html  dependencies.md  fit.html  index.html  index.rst  make.bat  requirements.txt  sample_usage.md  utils.html
mrexo/: IntegrateGeneralPDF.py  IntegratePDF.py  Optimizers.py  Test.py  (+20 more)
mrexo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+5726 files in other folders)
