[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mrexo"
version = "1.0"
authors = [
    { name="Shubham Kanodia", email="shbhuk@gmail.com" },
    { name="Matthias Y. He", email="mhe@nd.edu" },
]
description = "A Python code for the non-parametric and probabilistic fitting of planetary and other samples in mass-radius and higher dimensions"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage"  = "https://mrexo.readthedocs.io"
"Source" = "https://github.com/shbhuk/mrexo"
"Bug Tracker" = "https://github.com/shbhuk/mrexo/issues"
